# vista-cli

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  vista.spec
.github/workflows/: ci.yml  release.yml
Formula/: vista.rb
docs/: tui-frameworks-design.md  vista-cli-getting-started.md  vista-cli-guide.md  vista-cli-packaging.md  vista-cli-planning.md  vista-cli-portable-distribution.md  vista-viz-design.md
scripts/: publish-snapshot.sh
src/vista_cli/: __init__.py  __main__.py  canonical.py  cli.py  completion.py  config.py  fetch.py  snapshot.py  suggestions.py
src/vista_cli/commands/: build_cache.py  context.py  coverage.py  doc.py  doctor.py  fetch.py  file.py  global_.py  init.py  layers.py  links.py  list_.py  matrix.py  neighbors.py  option.py  package.py  patch.py  risk.py  routine.py  rpc.py  search.py  snapshot.py  timeline.py  tree.py  where.py
src/vista_cli/data/: packages.csv
src/vista_cli/format/: json_out.py  markdown.py  tsv_out.py
src/vista_cli/stores/: cache.py  code_model.py  code_view.py  data_model.py  doc_model.py  joined.py
tests/: test_myproject.py
tests/fixtures/: build_fixture_db.py
tests/fixtures/code-model/: options.tsv  packages.tsv  routine-calls.tsv  routine-globals.tsv  routines-comprehensive.tsv  rpcs.tsv  xindex-errors.tsv
tests/fixtures/data-model/: files.tsv  piks.tsv
tests/unit/: test_cache.py  test_canonical.py  test_cli.py  test_code_model.py  test_code_view.py  test_completion.py  test_config.py  test_data_model.py  test_doc_model.py  test_fetch.py  test_format.py  test_joined.py  test_list_cmd.py  test_snapshot.py  test_suggestions.py  test_tree.py
